--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,12 @@
     <version>6.11</version>
     <scope>test</scope>
 </dependency>
-
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.6.2</version>
+</dependency>
     
   </dependencies>
   
